Prevented footer from covering content on mobile screens

--- a/stylus/require/components.styl
+++ b/stylus/require/components.styl
@@ -575,6 +575,12 @@ body
     
 @media all and (max-width:979px)
     .footer
+        margin-top 1800px
+
         .footer-navigation
             ul
                 display block
+
+@media all and (max-width:450px)
+    .footer
+        margin-top 1200px
